--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@supabase/supabase-js": "^2.0.4",
     "axios": "^0.26.1",
     "babel-plugin-styled-components": "^2.0.6",
     "firebase": "^9.6.7",
